Fix: Navbar menu alignment and icons
Fix menu alignment and add icon for menu items. Link bootstrap icon stylesheet for icons in head. Use i tag instead span tag to add icons. Add some change in css/styles.css about i tag.

--- a/Restaurant-Site/css/styles.css
+++ b/Restaurant-Site/css/styles.css
@@ -71,6 +71,10 @@ body {
 	background: #e7e7e7;
 }
 
+#nav-list a i {
+	font-size: 1.8em;
+}
+
 #nav-list a span {
 	font-size: 1.8em;
 }
@@ -88,8 +92,4 @@ body {
 	color:  #557c3e;
 	text-align: right;
 	padding-right: 15px;
-}
-
-#navbarSupportedContent {
-
 }
